Revoved functional group models to put in own .Rmd

--- a/CWM_Models.Rmd
+++ b/CWM_Models.Rmd
@@ -34,7 +34,7 @@ cwm_traits_adj <-  read_csv("Datasheets/cwm_traits_updated.csv") %>%
   mutate(weighted_n = leaf_n * Abundance) %>%
   group_by(climate, treatment, Block) %>% #grouping by climate, treatment, and block
   summarise_all(mean, na.rm = TRUE) %>% #finding the mean
-  select(climate, treatment, Block, weighted_la, weighted_sla, weighted_ldmc, weighted_seed_mass, weighted_n)
+  dplyr::select(climate, treatment, Block, weighted_la, weighted_sla, weighted_ldmc, weighted_seed_mass, weighted_n)
 
 # log transformation for seed mass & leaf n
 cwm_traits_adj <- cwm_traits_adj %>% 
@@ -645,508 +645,3 @@ modelsummary::modelsummary(models,
 
 ```
 
-### Functional Groups
-
-- I started setting this up to look at changes in weighted means when grouped by functional group, but I think it would be more interesting to use the species-level, un-weighted data.
-
-```{r}
-cwm_functional <-  read_csv("~/github/Tejon_Functional_Traits/Datasheets/cwm_traits_updated.csv") %>%
-  left_join(other_traits, by = "species_name") %>% 
-  mutate(weighted_la = leaf_area * Abundance) %>% #multiplying trait values by species abundance
-  mutate(weighted_sla = sla * Abundance) %>% 
-  mutate(weighted_ldmc = ldmc * Abundance) %>%
-  mutate(weighted_seed_mass = seed_mass * Abundance) %>%
-  mutate(weighted_n = leaf_n * Abundance) %>%
-  group_by(climate, treatment, Block, functional_group) %>% #grouping by climate, treatment, and block
-  summarise_all(mean, na.rm = TRUE) %>% #finding the mean
-  dplyr::select(climate, treatment, functional_group, weighted_la, weighted_sla, weighted_ldmc, weighted_seed_mass, weighted_n)
-
-cwm_functional %>%
-  pivot_longer(cols = weighted_la:weighted_n,
-               names_to = "traits",
-               values_to = "value") %>%
-  ggplot(aes(x = climate, y = value, color = treatment)) +
-  geom_boxplot() +
-  theme_bw() +
-  facet_grid(traits ~ functional_group, scales = "free")
-
-grass <- cwm_functional %>% 
-  filter(functional_group == "grass")
-
-forb <- cwm_functional %>% 
-  filter(functional_group == "forb") %>% 
-  mutate(sqrt_la = sqrt(weighted_la))
-
-shrub <- cwm_functional %>% 
-  filter(functional_group == "shrub")
-  
-```
-
-#### CWMs with interaction between climate, treatment, and functional group
-
-##### leaf area
-```{r}
-#leaf area is very skewed:
-ggplot(cwm_functional, aes(x = weighted_la)) +
-  geom_histogram() +
-  theme_bw()+
-  facet_wrap(~functional_group)
-
-#trying glm
-funct_la <- glm(data = cwm_functional, weighted_la ~ climate * treatment * functional_group, family = gaussian, na.action = na.fail)
-dredge(funct_la)
-
-simulateResiduals(funct_la, plot= T) #does not pass dispersion test
-shapiro.test(residuals(funct_la)) #but residuals are normal
-
-testDispersion(simulateResiduals(funct_la, plot= T)) # does not pass
-
-#trying log transformation with gaussian
-cwm_functional <- cwm_functional %>% 
-  mutate(log_la = log(weighted_la))
-
-ggplot(cwm_functional, aes(x = log_la)) +
-  geom_histogram() +
-  theme_bw()+
-  facet_wrap(~functional_group)
-
-funct_la <- glm(data = cwm_functional, log_la ~ climate * treatment * functional_group, family = gaussian, na.action = na.fail)
-dredge(funct_la)
-funct_la <- glm(data = cwm_functional, log_la ~ climate + treatment + functional_group + climate:functional_group + functional_group:treatment, family = gaussian, na.action = na.fail)
-
-simulateResiduals(funct_la, plot= T) #looks good
-shapiro.test(residuals(funct_la)) # but residuals are not normal
-
-# trying Gamma with log link on un-transformed
-funct_la <- glm(data = cwm_functional, weighted_la ~ climate * treatment * functional_group, family = Gamma(link = "log"), na.action = na.fail)
-dredge(funct_la)
-funct_la <- glm(data = cwm_functional, weighted_la ~ climate + treatment + functional_group + climate:functional_group + functional_group:treatment, family = Gamma(link = "log"), na.action = na.fail)
-
-simulateResiduals(funct_la, plot= T) #does not pass dispersion test, but is very close!
-shapiro.test(residuals(funct_la)) #but residuals are normal
-
-#trying log+1 with gaussian
-cwm_functional <- cwm_functional %>% 
-  mutate(log_plus_la = log(weighted_la + 1))
-
-ggplot(cwm_functional, aes(x = log_plus_la)) +
-  geom_histogram() +
-  theme_bw()
-
-funct_la <- glm(data = cwm_functional, log_plus_la ~ climate * treatment * functional_group, family = gaussian, na.action = na.fail)
-dredge(funct_la)
-funct_la <- glm(data = cwm_functional, log_plus_la ~ climate + treatment + functional_group + climate:functional_group + functional_group:treatment, family = gaussian, na.action = na.fail)
-
-simulateResiduals(funct_la, plot= T) #good
-shapiro.test(residuals(funct_la)) #residuals are normal
-
-emmeans(funct_la, pairwise ~ climate | treatment | functional_group)
-emmeans(funct_la, pairwise ~ treatment | functional_group)
-emmeans(funct_la, pairwise ~ functional_group)
-
-# LA_funct_sig_pairs <- as.data.frame(pairs(emmeans(funct_la, ~ climate * treatment * functional_group))) %>% 
-#   separate(contrast, c("A", "B"), sep = " - ") %>% 
-#   separate(A, c("A_climate", "A_treatment", "A_functional_group"), sep = ",") %>% 
-#   separate(B, c("B_climate", "B_treatment", "B_functional_group"), sep = ",") %>% 
-#   filter((A_climate == B_climate & A_functional_group == B_functional_group) | 
-#           (A_climate == B_climate & A_treatment == B_treatment) | 
-#            (A_treatment == B_treatment & A_functional_group == B_functional_group))
-# LA_funct_sig_pairs
-
-```
-##### specific leaf area
-```{r}
-#leaf area is very skewed:
-ggplot(cwm_functional, aes(x = weighted_sla)) +
-  geom_histogram() +
-  theme_bw()+
-  facet_wrap(~functional_group)
-
-cwm_functional <- cwm_functional %>% 
-  mutate(log_sla = log(weighted_sla))
-
-funct_sla <- glm(data = cwm_functional, weighted_sla ~ climate * treatment * functional_group, family = gaussian, na.action = na.fail)
-dredge(funct_sla)
-
-simulateResiduals(funct_sla, plot= T) #does not pass dispersion test
-shapiro.test(residuals(funct_sla)) # not normal
-
-#trying log transformation with gaussian
-funct_sla <- glm(data = cwm_functional, log_sla ~ climate * treatment * functional_group, family = gaussian, na.action = na.fail)
-dredge(funct_sla)
-funct_sla <- glm(data = cwm_functional, log_sla ~ climate + functional_group + treatment + climate:functional_group, family = gaussian, na.action = na.fail)
-
-simulateResiduals(funct_sla, plot= T) # good
-shapiro.test(residuals(funct_sla)) # not normal
-
-# trying Gamma with log link on un-transformed
-funct_sla <- glm(data = cwm_functional, weighted_sla ~ climate * treatment * functional_group, family = Gamma, na.action = na.fail)
-dredge(funct_sla)
-funct_sla <- glm(data = cwm_functional, weighted_sla ~ climate + functional_group + treatment + climate:functional_group, family = Gamma, na.action = na.fail)
-
-simulateResiduals(funct_sla, plot= T) # not normal
-shapiro.test(residuals(funct_sla)) # not normal
-
-#trying log+1 with gaussian
-cwm_functional <- cwm_functional %>% 
-  mutate(log_plus_sla = log(weighted_sla + 1))
-
-funct_sla <- glm(data = cwm_functional, log_plus_sla ~ climate * treatment * functional_group, family = gaussian, na.action = na.fail)
-dredge(funct_sla)
-funct_sla <- glm(data = cwm_functional, log_plus_sla ~ climate + functional_group + treatment + climate:functional_group, family = gaussian, na.action = na.fail)
-
-simulateResiduals(funct_sla, plot= T) #good
-shapiro.test(residuals(funct_sla)) #normal
-
-emmeans(funct_sla, pairwise ~ climate | treatment | functional_group)
-emmeans(funct_sla, pairwise ~ treatment | functional_group)
-emmeans(funct_sla, pairwise ~ functional_group)
-
-```
-##### ldmc
-```{r}
-cwm_functional <- cwm_functional %>% 
-  mutate(log_ldmc = log(weighted_ldmc))
-
-funct_ldmc <- glm(data = cwm_functional, weighted_ldmc ~ climate * treatment * functional_group, family = gaussian, na.action = na.fail)
-dredge(funct_ldmc)
-funct_ldmc <- glm(data = cwm_functional, weighted_ldmc ~ climate + functional_group + treatment + climate:functional_group + functional_group:treatment, na.action = na.fail)
-
-simulateResiduals(funct_ldmc, plot= T) # does not pass dispersion test
-shapiro.test(residuals(funct_ldmc)) # not normal
-
-funct_ldmc <- glm(data = cwm_functional, log_ldmc ~ climate * treatment * functional_group, family = gaussian, na.action = na.fail)
-dredge(funct_ldmc)
-funct_ldmc <- glm(data = cwm_functional, log_ldmc ~ climate + functional_group + treatment + climate:functional_group + functional_group:treatment, na.action = na.fail)
-
-simulateResiduals(funct_ldmc, plot= T) # ok
-shapiro.test(residuals(funct_ldmc)) # normal
-
-emmeans(funct_ldmc, pairwise ~ climate | treatment | functional_group)
-emmeans(funct_ldmc, pairwise ~ treatment | functional_group)
-emmeans(funct_ldmc, pairwise ~ functional_group)
-```
-##### lnc
-```{r}
-funct_n <- glm(data = cwm_functional, weighted_n ~ climate * treatment * functional_group, family = gaussian, na.action = na.fail)
-dredge(funct_n)
-funct_n <- glm(data = cwm_functional, weighted_n ~ climate + functional_group + treatment + climate:functional_group + functional_group:treatment, na.action = na.fail)
-
-simulateResiduals(funct_n, plot= T) # not good
-shapiro.test(residuals(funct_n)) # not normal
-
-cwm_functional <- cwm_functional %>% 
-  mutate(log_n = log(weighted_n)) %>% 
-  mutate(log_plus_n = log(weighted_n+1))
-
-# trying log transformation with gaussian
-funct_n <- glm(data = cwm_functional, log_n ~ climate * treatment * functional_group, family = gaussian, na.action = na.fail)
-dredge(funct_n)
-funct_n <- glm(data = cwm_functional, log_n ~ climate + functional_group + treatment + climate:functional_group, na.action = na.fail)
-
-simulateResiduals(funct_n, plot= T) # looks ok
-shapiro.test(residuals(funct_n)) # not normal
-
-# trying log(n+1) transformation with gaussian
-funct_n <- glm(data = cwm_functional, log_plus_n ~ climate * treatment * functional_group, family = gaussian, na.action = na.fail)
-dredge(funct_n)
-funct_n <- glm(data = cwm_functional, log_plus_n ~ climate + functional_group + treatment + climate:functional_group, na.action = na.fail)
-
-simulateResiduals(funct_n, plot= T) # looks ok
-shapiro.test(residuals(funct_n)) # normal
-
-emmeans(funct_n, pairwise ~ climate | treatment | functional_group)
-emmeans(funct_n, pairwise ~ treatment | functional_group)
-emmeans(funct_n, pairwise ~ functional_group)
-
-```
-##### seed mass
-```{r}
-funct_seed_mass <- glm(data = cwm_functional, weighted_seed_mass ~ climate * treatment * functional_group, family = gaussian, na.action = na.fail)
-dredge(funct_seed_mass)
-funct_seed_mass <- glm(data = cwm_functional, weighted_seed_mass ~ climate + functional_group + treatment + climate:functional_group, na.action = na.fail)
-
-simulateResiduals(funct_seed_mass, plot= T) # bad
-shapiro.test(residuals(funct_seed_mass)) # not normal
-
-# log transformation with gaussian
-cwm_functional <- cwm_functional %>% 
-  mutate(log_seed_mass = log(weighted_seed_mass))
-
-funct_seed_mass <- glm(data = cwm_functional, log_seed_mass ~ climate * treatment * functional_group, family = gaussian, na.action = na.fail)
-dredge(funct_seed_mass)
-funct_seed_mass <- glm(data = cwm_functional,log_seed_mass ~ climate + functional_group + climate:functional_group, na.action = na.fail)
-
-simulateResiduals(funct_seed_mass, plot= T) # ok
-shapiro.test(residuals(funct_seed_mass)) # normal
-
-# for back transformation
-funct_seed_mass <- glm(data = cwm_functional, log(weighted_seed_mass) ~ climate + functional_group + climate:functional_group, na.action = na.fail)
-
-funct_seed_mass_emm <- emmeans(funct_seed_mass, ~ climate * functional_group)
-summary(funct_seed_mass_emm) # results are given on a log scale
-summary(funct_seed_mass_emm, infer = TRUE, null = log(35), type = "response")
-
-funct_seed_mass.rg <- update(ref_grid(funct_seed_mass), tran = make.tran("genlog", 1))
-
-contrast(regrid(funct_seed_mass.rg))
-
-emmeans(funct_seed_mass.rg, pairwise ~ climate | functional_group)
-emmeans(funct_seed_mass, pairwise ~ climate | functional_group)
-emmeans(funct_seed_mass, pairwise ~ climate | functional_group)
-emmeans(funct_seed_mass, pairwise ~ functional_group)
-
-```
-#### Individual Models:
-#### a. grasses:
-##### i. leaf area
-```{r}
-grass_la <- glm(data = grass, weighted_la ~ climate * treatment, family = gaussian, na.action = na.fail)
-dredge(grass_la) # best model: trait ~ climate * treatment
-
-simulateResiduals(grass_la, plot= T) #good
-shapiro.test(residuals(grass_la)) #normal
-
-summary(grass_la)
-emmeans(grass_la, pairwise ~ climate)
-emmeans(grass_la, pairwise ~ treatment | climate)
-```
-##### ii. specific leaf area
-```{r}
-grass_sla <- glm(data = grass, weighted_sla ~ climate * treatment, family = gaussian, na.action = na.fail)
-dredge(grass_sla) # best model: trait ~ climate * treatment
-
-simulateResiduals(grass_sla, plot= T) # good
-shapiro.test(residuals(grass_sla)) # normal
-
-summary(grass_sla)
-emmeans(grass_sla, pairwise ~ climate)
-emmeans(grass_sla, pairwise ~ treatment | climate)
-```
-##### iii.ldmc
-```{r}
-grass_ldmc <- glm(data = grass, weighted_ldmc ~ climate * treatment, family = gaussian, na.action = na.fail)
-dredge(grass_ldmc) # best model: trait ~ climate + treatment
-grass_ldmc <- glm(data = grass, weighted_ldmc ~ climate + treatment, family = gaussian, na.action = na.fail)
-
-simulateResiduals(grass_ldmc, plot= T) # not good
-shapiro.test(residuals(grass_ldmc)) # not normal
-
-grass <- grass %>% 
-  mutate(log_ldmc = log(weighted_ldmc))
-
-grass_ldmc <- glm(data = grass, log_ldmc ~ climate * treatment, family = gaussian, na.action = na.fail)
-dredge(grass_ldmc) # best model: trait ~ climate
-grass_ldmc <- glm(data = grass, log_ldmc ~ climate, family = gaussian, na.action = na.fail)
-
-simulateResiduals(grass_ldmc, plot= T) # good
-shapiro.test(residuals(grass_ldmc)) # normal
-
-summary(grass_ldmc)
-emmeans(grass_ldmc, pairwise ~ climate)
-```
-##### iv. lnc
-```{r}
-grass_n <- glm(data = grass, weighted_n ~ climate * treatment, family = gaussian, na.action = na.fail)
-dredge(grass_n) # best model: trait ~ climate
-grass_n <- glm(data = grass, weighted_n ~ climate, family = gaussian, na.action = na.fail)
-
-simulateResiduals(grass_n, plot= T) # good
-shapiro.test(residuals(grass_n)) # normal
-
-summary(grass_n)
-emmeans(grass_n, pairwise ~ climate)
-```
-##### v. seed mass
-```{r}
-grass_seed_mass <- glm(data = grass, weighted_seed_mass ~ climate * treatment, family = gaussian, na.action = na.fail)
-boxcox(grass_seed_mass) # might be best to do ln transformation
-dredge(grass_seed_mass) # best model: trait ~ climate + treatment
-grass_seed_mass <- glm(data = grass, weighted_seed_mass ~ climate + treatment, family = gaussian, na.action = na.fail)
-
-simulateResiduals(grass_seed_mass, plot= T) # not good
-shapiro.test(residuals(grass_seed_mass)) # normal
-
-grass <- grass %>% 
-  mutate(log_seed_mass = log(weighted_seed_mass)) %>% 
-  mutate(ln_seed_mass = log10(weighted_seed_mass)) %>% 
-  mutate(sqrt_seed_mass = sqrt(weighted_seed_mass))
-
-grass_seed_mass <- glm(data = grass, log_seed_mass ~ climate * treatment, family = gaussian, na.action = na.fail)
-dredge(grass_seed_mass) # best model: trait ~ climate
-grass_seed_mass <- glm(data = grass, log_seed_mass ~ climate, family = gaussian, na.action = na.fail)
-
-simulateResiduals(grass_seed_mass, plot= T) # ok?
-shapiro.test(residuals(grass_seed_mass)) # not normal
-
-grass_seed_mass <- glm(data = grass, ln_seed_mass ~ climate * treatment, family = gaussian, na.action = na.fail)
-dredge(grass_seed_mass) # best model: trait ~ climate
-grass_seed_mass <- glm(data = grass, ln_seed_mass ~ climate, family = gaussian, na.action = na.fail)
-
-simulateResiduals(grass_seed_mass, plot= T) # ok?
-shapiro.test(residuals(grass_seed_mass)) # not normal
-
-grass_seed_mass <- glm(data = grass, sqrt_seed_mass ~ climate * treatment, family = gaussian, na.action = na.fail)
-dredge(grass_seed_mass) # best model: trait ~ climate + treatment
-grass_seed_mass <- glm(data = grass, sqrt_seed_mass ~ climate + treatment, family = gaussian, na.action = na.fail)
-
-simulateResiduals(grass_seed_mass, plot= T) # not ok
-shapiro.test(residuals(grass_seed_mass)) # normal
-
-# gamma distribution worked all along
-grass_seed_mass <- glm(data = grass, weighted_seed_mass ~ climate * treatment, family = Gamma, na.action = na.fail)
-dredge(grass_seed_mass) # best model: trait ~ climate + treatment
-grass_seed_mass <- glm(data = grass, weighted_seed_mass ~ climate + treatment, family = Gamma, na.action = na.fail)
-
-simulateResiduals(grass_seed_mass, plot= T) # good
-shapiro.test(residuals(grass_seed_mass)) # normal
-
-summary(grass_seed_mass)
-emmeans(grass_seed_mass, pairwise ~ climate)
-emmeans(grass_seed_mass, pairwise ~ treatment | climate)
-```
-#### b. forbs
-##### i. la
-```{r}
-forb_la <- glm(data = forb, log_la ~ climate * treatment, family = gaussian, na.action = na.fail)
-dredge(forb_la) # best model is climate + treatment
-forb_la <- glm(data = forb, log_la ~ climate + treatment, family = gaussian, na.action = na.fail)
-
-simulateResiduals(forb_la, plot= T) # ok
-shapiro.test(residuals(forb_la)) #normal
-
-summary(forb_la)
-emmeans(forb_la, pairwise ~ climate)
-emmeans(forb_la, pairwise ~ treatment | climate)
-```
-##### ii. sla
-```{r}
-forb_sla <- glm(data = forb, weighted_sla ~ climate * treatment, family = gaussian, na.action = na.fail)
-dredge(forb_sla) # best model is only climate
-forb_sla <- glm(data = forb, weighted_sla ~ climate, family = gaussian, na.action = na.fail)
-
-simulateResiduals(forb_sla, plot= T) # ok
-shapiro.test(residuals(forb_sla)) # not normal
-
-forb_sla <- glm(data = forb, weighted_sla ~ climate * treatment, family = Gamma, na.action = na.fail)
-dredge(forb_sla) # best model: trait ~ climate
-forb_sla <- glm(data = forb, weighted_sla ~ climate, family = Gamma, na.action = na.fail)
-
-simulateResiduals(forb_sla, plot= T) # ok
-shapiro.test(residuals(forb_sla)) # normal
-
-summary(forb_sla)
-emmeans(forb_sla, pairwise ~ climate)
-```
-##### iii. ldmc
-```{r}
-forb_ldmc <- glm(data = forb, weighted_ldmc ~ climate * treatment, family = gaussian, na.action = na.fail)
-dredge(forb_ldmc) # best model: trait ~ treatment
-forb_ldmc <- glm(data = forb, weighted_ldmc ~ treatment, family = gaussian, na.action = na.fail)
-
-simulateResiduals(forb_ldmc, plot= T) # ok
-shapiro.test(residuals(forb_ldmc)) # normal
-
-summary(forb_ldmc)
-emmeans(forb_ldmc, pairwise ~ treatment)
-```
-##### iv.lnc
-```{r}
-forb_leaf_n <- glm(data = forb, weighted_n ~ climate * treatment, family = gaussian, na.action = na.fail)
-dredge(forb_leaf_n) # best model: trait ~ climate
-forb_leaf_n <- glm(data = forb, weighted_n ~ climate, family = gaussian, na.action = na.fail)
-
-simulateResiduals(forb_leaf_n, plot= T) # ok
-shapiro.test(residuals(forb_leaf_n)) # normal
-
-summary(forb_leaf_n)
-emmeans(forb_leaf_n, pairwise ~ climate)
-```
-##### v.seed mass
-```{r}
-forb_seed_mass <- glm(data = forb, weighted_seed_mass ~ climate * treatment, family = gaussian, na.action = na.fail)
-dredge(forb_seed_mass) # best model: trait ~ climate * treatment
-
-simulateResiduals(forb_seed_mass, plot= T) # not good
-shapiro.test(residuals(forb_seed_mass)) # not normal
-
-forb_seed_mass <- glm(data = forb, weighted_seed_mass ~ climate * treatment, family = Gamma, na.action = na.fail)
-dredge(forb_seed_mass) # best model: trait ~ climate * treatment
-
-simulateResiduals(forb_seed_mass, plot= T) # ok
-shapiro.test(residuals(forb_seed_mass)) # not normal
-
-forb <- forb %>% 
-  mutate(log_seed_mass = log(weighted_seed_mass))
-
-forb_seed_mass <- glm(data = forb, log_seed_mass ~ climate * treatment, family = gaussian, na.action = na.fail)
-dredge(forb_seed_mass) # best model: trait ~ climate
-forb_seed_mass <- glm(data = forb, log_seed_mass ~ climate, family = gaussian, na.action = na.fail)
-
-simulateResiduals(forb_seed_mass, plot= T) # ok
-shapiro.test(residuals(forb_seed_mass)) # normal
-
-summary(forb_seed_mass)
-emmeans(forb_seed_mass, pairwise ~ climate)
-```
-#### c. shrubs
-##### i.la
-- what do you do when residuals are normal but the residual vs. predicted plot looks terrible?
-```{r}
-shrub_la <- glm(data = shrub, weighted_la ~ climate * treatment, family = gaussian, na.action = na.fail)
-dredge(shrub_la) # best model: trait ~ climate + treatment
-shrub_la  <- glm(data = shrub, weighted_la ~ climate + treatment, family = gaussian, na.action = na.fail)
-
-simulateResiduals(shrub_la, plot= T) # very bad
-shapiro.test(residuals(shrub_la)) # normal
-
-summary(shrub_la)
-emmeans(shrub_la, pairwise ~ climate)
-```
-##### ii.sla
-```{r}
-shrub_sla <- glm(data = shrub, weighted_sla ~ climate * treatment, family = gaussian, na.action = na.fail)
-dredge(shrub_sla) # best model: trait ~ 1
-shrub_sla  <- glm(data = shrub, weighted_sla ~ 1, family = gaussian, na.action = na.fail)
-
-simulateResiduals(shrub_sla, plot= T) # fine
-shapiro.test(residuals(shrub_sla)) # normal
-
-```
-##### iii.ldmc
-```{r}
-shrub_ldmc <- glm(data = shrub, weighted_ldmc ~ climate * treatment, family = gaussian, na.action = na.fail)
-dredge(shrub_ldmc) # best model: trait ~ treatment; NEED TO DO MODEL AVERAGING
-shrub_ldmc  <- glm(data = shrub, weighted_ldmc ~ treatment, family = gaussian, na.action = na.fail)
-
-simulateResiduals(shrub_ldmc, plot= T) # fine
-shapiro.test(residuals(shrub_ldmc)) # normal
-
-summary(shrub_ldmc)
-emmeans(shrub_ldmc, pairwise ~ treatment)
-```
-##### iv.lnc
-```{r}
-shrub_n <- glm(data = shrub, weighted_n ~ climate * treatment, family = gaussian, na.action = na.fail)
-dredge(shrub_n) # NEED TO DO MODEL AVERAGING
-shrub_n  <- glm(data = shrub, weighted_n ~ treatment, family = gaussian, na.action = na.fail)
-
-simulateResiduals(shrub_n, plot= T) # fine
-shapiro.test(residuals(shrub_n)) # normal
-
-summary(shrub_n)
-emmeans(shrub_n, pairwise ~ treatment)
-```
-##### v.seed mass
-```{r}
-shrub_seed_mass <- glm(data = shrub, weighted_seed_mass ~ climate * treatment, family = gaussian, na.action = na.fail)
-dredge(shrub_seed_mass) # NEED TO DO MODEL AVERAGING
-shrub_seed_mass  <- glm(data = shrub, weighted_seed_mass ~ climate + treatment, family = gaussian, na.action = na.fail)
-
-simulateResiduals(shrub_seed_mass, plot= T) # bad
-shapiro.test(residuals(shrub_seed_mass)) # normal
-
-summary(shrub_n)
-emmeans(shrub_n, pairwise ~ treatment)
-
-```
