--- a/Functional_Group_Models.Rmd
+++ b/Functional_Group_Models.Rmd
@@ -56,6 +56,28 @@ cwm_functional <-  read_csv("~/github/Tejon_Functional_Traits/Datasheets/cwm_tra
   summarise_all(mean, na.rm = TRUE) %>% #finding the mean
   dplyr::select(climate, treatment, functional_group, weighted_la, weighted_sla, weighted_ldmc, weighted_seed_mass, weighted_n)
 
+
+cwm_functional_2 <- read_csv("Datasheets/cwm_traits_updated.csv") %>% 
+  left_join(other_traits, by = "species_name") %>% 
+  dplyr::select(climate, treatment, Block, functional_group, Abundance) %>% 
+  dplyr::filter(Block == "A" | Block ==  "D" | Block ==  "G") %>% 
+  group_by(climate, functional_group) %>% 
+  summarise(Total_Abundance = sum(Abundance))
+
+ggplot(cwm_functional_2, aes(x = "", y = Total_Abundance, fill = functional_group)) +
+  geom_bar(stat="identity", width=1, color = "white") +
+  coord_polar("y", start = 0) +
+  facet_wrap(~climate) +
+  theme_void() +
+  labs(fill = "Functional Group:") +
+  scale_fill_manual(values = c("#c7eae5", "#b8e186", "#dfc27d")) +
+  theme(plot.background = element_rect(fill = "transparent", color = NA),
+        legend.background = element_rect(fill = "white", size = 0)) +
+  theme(legend.position="bottom")
+  
+# ggsave("plant_communit_piechart.png", path = "~/github/Tejon_Functional_Traits/Figures", width = 9, height = 7, bg = "transparent")
+
+#  barplot showing all climate/treatments
 cwm_functional %>%
   pivot_longer(cols = weighted_la:weighted_n,
                names_to = "traits",
@@ -211,6 +233,7 @@ funct_ldmc <- glm(data = cwm_functional, weighted_ldmc ~ climate + functional_gr
 simulateResiduals(funct_ldmc, plot= T) # does not pass dispersion test
 shapiro.test(residuals(funct_ldmc)) # not normal
 
+# log transformation
 funct_ldmc <- glm(data = cwm_functional, log_ldmc ~ climate * treatment * functional_group, family = gaussian, na.action = na.fail)
 dredge(funct_ldmc)
 funct_ldmc <- glm(data = cwm_functional, log_ldmc ~ climate + functional_group + treatment + climate:functional_group + functional_group:treatment, na.action = na.fail)
@@ -293,6 +316,72 @@ emmeans(funct_seed_mass, pairwise ~ climate | functional_group)
 emmeans(funct_seed_mass, pairwise ~ functional_group)
 
 ```
+##### Best-Fit Model Table
+```{r}
+dredge_funct_la <- as.data.frame(dredge(funct_la)) %>%
+  filter(AICc == min(AICc)) %>% 
+  mutate(CWM = "Leaf Area (log(x+1))") %>% 
+  dplyr::select(CWM, climate, functional_group, treatment, "climate:functional_group","climate:treatment", "functional_group:treatment", "climate:functional_group")
+
+dredge_funct_sla <-  as.data.frame(dredge(funct_sla)) %>% 
+  filter(AICc == min(AICc)) %>% 
+  mutate(CWM = "Specific Leaf Area (log(x+1)") %>% 
+  dplyr::select(CWM, climate, functional_group, treatment, "climate:functional_group")
+
+dredge_funct_ldmc <- as.data.frame(dredge(funct_ldmc)) %>% 
+  filter(AICc == min(AICc)) %>% 
+  mutate(CWM = "Leaf Dry Matter Content (log)") %>% 
+  dplyr::select(CWM, climate, functional_group, treatment, "climate:functional_group", "functional_group:treatment")
+
+dredge_funct_seed_mass <- as.data.frame(dredge(funct_seed_mass)) %>% 
+  filter(AICc == min(AICc)) %>% 
+  mutate(CWM = "Seed Mass (log)") %>% 
+  dplyr::select(CWM, climate, functional_group, "climate:functional_group")
+
+dredge_funct_n <- as.data.frame(dredge(funct_n)) %>% 
+  filter(AICc == min(AICc)) %>% 
+  mutate(CWM = "Leaf Nitrogen Content (log(x+1)") %>% 
+  dplyr::select(CWM, climate, functional_group, treatment, "climate:functional_group")
+
+dredge_table <- dredge_funct_la %>% 
+  full_join(dredge_funct_sla) %>% 
+  full_join(dredge_funct_ldmc) %>% 
+  full_join(dredge_funct_seed_mass) %>% 
+  full_join(dredge_funct_n) %>% 
+  mutate(climate = str_replace(climate, "\\+","x")) %>%
+  mutate(functional_group = str_replace(functional_group, "\\+","x")) %>%
+  mutate(treatment = str_replace(treatment, "\\+","x")) %>% 
+  mutate(`climate:functional_group` = str_replace(`climate:functional_group`, "\\+","x")) %>%
+  mutate(`climate:treatment` = str_replace(`climate:treatment`, "\\+","x")) %>% 
+  mutate(`functional_group:treatment` = str_replace(`functional_group:treatment`, "\\+","x")) %>% 
+  mutate(`climate:functional_group` = str_replace(`climate:functional_group`, "\\+","x"))
+
+# Trying gt package
+# data must be a tibble
+
+pretty_table <- dredge_table %>% 
+  as_tibble() %>% 
+  gt() %>% 
+  tab_header(
+    title = "Functional Group CWM Best-Fit Models"
+  ) %>% 
+  tab_spanner(
+    label = "Fixed Effects Terms",
+    columns = vars(climate, functional_group, treatment, "climate:functional_group","climate:treatment", "functional_group:treatment", "climate:functional_group")
+  ) %>% 
+  fmt_missing(
+    columns = vars(climate, functional_group, treatment, "climate:functional_group","climate:treatment", "functional_group:treatment", "climate:functional_group"),
+    missing_text = " "
+  ) %>% 
+  tab_source_note(
+    source_note = "x indicates selection of fixed effect term for best-fit model"
+  )
+
+# pretty_table
+
+gtsave(data = pretty_table, filename = "Funct_Group_best_fit_table.png", path = "~/github/Tejon_Functional_Traits/Figures")
+```
+
 #### Individual Models:
 #### a. grasses:
 ##### i. leaf area
