--- a/CWM_Models.Rmd
+++ b/CWM_Models.Rmd
@@ -22,6 +22,9 @@ library(lsmeans)
 library(gridExtra)
 library(multcomp)
 library(car)
+# remotes::install_github("const-ae/ggsignif")
+library(ggsignif)
+
 
 other_traits <- read_csv("Datasheets/seed_mass_leaf_N.csv")
 
@@ -171,8 +174,66 @@ la_emm <- emmeans(LA_CWM, ~ climate)
 la_cdf <- multcomp::cld(la_emm, alpha = 0.05, Letters = LETTERS)
 
 ```
+##### i. EMM graph
+```{r}
+# color of arrows
+arrow_colors <- (rep(c("red", "orange", "blue"), 3))
 
+# significance caption
+symbol <- "\u2264"
+caption <- paste0(symbol, "0.05(*), ", symbol, "0.01()**, ", symbol, "0.001(***)")
 
+#function
+emm_plot <- function(emmeans) {
+  plot(emmeans, by = NULL, CIs = FALSE, comparisons = TRUE, horizontal = FALSE, colors = "darkgreen") +
+  # facet_grid by climate, and remove empty values
+  # facet_grid(. ~climate, scales = "free", space = "free") +
+  labs(y = "EMM", x = "Climate") +
+  aes(fill = as.factor(treatment)) +
+  # changing color of comparison arrow lines
+  geom_segment(aes_(y = ~the.emmean, yend = ~lcmpl, x = ~pri.fac, xend = ~pri.fac), #copied from function's code on github
+               arrow = arrow(length = ggplot2::unit(.07, "inches"), type = "closed"),
+               color = arrow_colors) +
+  geom_segment(ggplot2::aes_(y = ~the.emmean, yend = ~rcmpl, x = ~pri.fac, xend = ~pri.fac),
+               arrow = arrow(length = ggplot2::unit(.07, "inches"), type = "closed"),
+               color = arrow_colors) +
+  # changing color of point
+  geom_point(aes_(fill = "black")) +
+  # changing theme
+  theme_bw() +
+  # removing legend
+  theme(legend.position = "none") +
+  # changing x labels within facet_grid
+  scale_x_discrete(labels = c("Open", "Partial", "Total", "Open", "Partial", "Total", "Open", "Partial", "Total")) +
+  # transparent background
+  theme(panel.background = element_rect(fill = "transparent"), plot.background = element_rect(fill = "transparent", color = NA)) +
+  # adding footnote
+  labs(caption = caption)
+}
+
+la_emmeans <- emmeans(LA_CWM, ~ treatment | climate)
+plot1 <- emm_plot(la_emmeans)+
+  # adding title
+  labs(title = "Leaf Area CWM") +
+  # adding significance of comparisons
+  # Arid-Partial - Arid-Total
+  geom_signif(annotation = "***",
+    y_position = 85, xmin = 2, xmax = 3,
+    tip_length = c(.5, .05)) +
+  # Arid-Open - Arid-Total
+  geom_signif(annotation = "***",
+    y_position = 90, xmin = 1, xmax = 3,
+    tip_length = c(.75, .05)) +
+  # Mesic-Open - Mesic-Total
+   geom_signif(annotation = "*",
+    y_position = 50, xmin = 7, xmax = 9,
+    tip_length = c(.05, .3))
+
+plot1
+
+ggsave("LA_CWM_emmean.png", plot = plot1, path = "~/github/Tejon_Functional_Traits/Figures", height = 4, width = 5, bg = "transparent")
+```
+##### ii. double-checking against ANOVA results
 ```{r}
 # double-checking against anova results
 LA_aov <- aov(data = cwm_traits_adj, weighted_la ~ climate * treatment)
@@ -236,9 +297,34 @@ plot(emmeans(SLA_CWM, pairwise ~ treatment | climate), comparisons = TRUE)
 sla_emm <- emmeans(SLA_CWM, ~ climate)
 multcomp::cld(sla_emm, alpha = 0.05, Letters = LETTERS)
 
+
 ```
+##### i. EMM graph
+```{r}
+sla_emmeans <- emmeans(SLA_CWM, ~ treatment | climate)
+# emmeans(SLA_CWM, pairwise ~ treatment | climate)
 
+plot2 <- emm_plot(sla_emmeans)+
+  # adding title
+  labs(title = "Specific Leaf Area CWM") +
+  # adding significance of comparisons
+  # Arid-Open - Arid-Partial
+  geom_signif(annotation = "*",
+    y_position = 3.25, xmin = 1, xmax = 2,
+    tip_length = c(.02, .4)) +
+  # Arid-Open - Arid-Total
+  geom_signif(annotation = "***",
+    y_position = 4.25, xmin = 1, xmax = 3,
+    tip_length = c(.3, .05)) +
+  # Arid-Partial - Arid-Total
+   geom_signif(annotation = "***",
+    y_position = 4.75, xmin = 2, xmax = 3,
+    tip_length = c(.05, .1))
 
+plot2
+
+ggsave("SLA_CWM_emmean.png", plot = plot2, path = "~/github/Tejon_Functional_Traits/Figures", height = 4, width = 5, bg = "transparent")
+```
 #### c. LDMC CWM
 
 - Same trend observed between all climates
@@ -303,7 +389,32 @@ plot(emmeans(LDMC_CWM, pairwise ~ treatment | climate), comparisons = TRUE)
 multcomp::cld(emmeans(LDMC_CWM, ~ treatment), alpha = 0.05, Letters = LETTERS)
 
 ```
+##### i. EMM graph
+```{r}
+ldmc_emmeans <- emmeans(LDMC_CWM, ~ treatment | climate)
+emmeans(LDMC_CWM, pairwise ~ treatment | climate)
 
+plot3 <- emm_plot(ldmc_emmeans) +
+  # adding title
+  labs(title = "Leaf Dry Matter Content CWM") +
+  # adding significance of comparisons
+  # Arid-Partial - Arid-Total
+  geom_signif(annotation = "**",
+    y_position = 42, xmin = 2, xmax = 3,
+    tip_length = c(.25, .02)) +
+  # Int-Partial - Int-Total
+  geom_signif(annotation = "**",
+    y_position = 55, xmin = 5, xmax = 6,
+    tip_length = c(.5, .1)) +
+  # Mesic-Partial - Mesic-Total
+   geom_signif(annotation = "**",
+    y_position = 40, xmin = 8, xmax = 9,
+    tip_length = c(.25, .05))
+
+# plot3
+
+ggsave("LDMC_CWM_emmean.png", plot = plot3, path = "~/github/Tejon_Functional_Traits/Figures", height = 4, width = 5, bg = "transparent")
+```
 #### d. Seed mass CWM
 
 - same trend observed across climates
@@ -359,7 +470,33 @@ plot(emmeans(log_seed_mass, pairwise ~ treatment | climate))
 multcomp::cld(emmeans(log_seed_mass, ~ treatment), alpha = 0.05, Letters = LETTERS)
 
 ```
+##### i. EMM graph
+```{r}
+seed_mass_emmeans <- emmeans(log_seed_mass, ~ treatment | climate)
+emmeans(log_seed_mass, pairwise ~ treatment | climate)
 
+plot4 <- emm_plot(seed_mass_emmeans) +
+  # adding title
+  labs(title = "Seed Mass (log) CWM") +
+   # adding significance of comparisons
+  # Arid-Open - Arid-Total
+  geom_signif(annotation = "**",
+    y_position = -.2, xmin = 1, xmax = 3,
+    tip_length = c(.3, .025)) +
+  # Int-Open - Int-Total
+  geom_signif(annotation = "**",
+    y_position = 0, xmin = 4, xmax = 6,
+    tip_length = c(.35, .05)) +
+  # Mesic-Open - Mesic-Total
+   geom_signif(annotation = "**",
+    y_position = -.6, xmin = 7, xmax = 9,
+    tip_length = c(.3, .05))
+  
+# plot 4
+  
+ggsave("seed_mass_CWM_emmean.png", plot = plot4, path = "~/github/Tejon_Functional_Traits/Figures", height = 4, width = 5, bg = "transparent")
+```
+#####
 #### e. Leaf-N CWM
 
 - No difference between any of the different herbivore treatments within climates
@@ -380,7 +517,6 @@ multcomp::cld(emmeans(log_seed_mass, ~ treatment), alpha = 0.05, Letters = LETTE
 - Total:
     - Arid-Total > Mesic-Total
     - Int-Total > Mesic-Total
-
 
 ```{r} 
 leaf_n_CWM <- glm(data = cwm_traits_adj, weighted_n ~ climate * treatment, family = gaussian, na.action = na.fail) 
@@ -409,6 +545,32 @@ emmeans(log_n_CWM, pairwise ~ climate | treatment)
 
 plot(emmeans(log_n_CWM, pairwise ~ treatment | climate))
 multcomp::cld(emmeans(log_n_CWM, ~ treatment), alpha = 0.05, Letters = LETTERS)
+```
+##### i. EMM graph
+```{r}
+n_emmeans <- emmeans(log_n_CWM, ~ treatment | climate)
+emmeans(log_n_CWM, pairwise ~ treatment | climate)
+
+plot4 <- emm_plot(n_emmeans) +
+  # adding title
+  labs(title = "Leaf Nitrogen Concentration (log) CWM") +
+   # adding significance of comparisons
+  # Arid-Partial - Arid-Total
+  geom_signif(annotation = "*",
+    y_position = 1.15, xmin = 2, xmax = 3,
+    tip_length = c(.3, .025)) +
+  # Int-Partial - Int-Total
+  geom_signif(annotation = "*",
+    y_position = 1.25, xmin = 5, xmax = 6,
+    tip_length = c(.35, .05)) +
+  # Mesic-Partial - Mesic-Total
+   geom_signif(annotation = "*",
+    y_position = 1.05, xmin = 8, xmax = 9,
+    tip_length = c(.3, .05))
+
+# plot 4
+  
+ggsave("leaf_n_CWM_emmean.png", plot = plot4, path = "~/github/Tejon_Functional_Traits/Figures", height = 4, width = 5, bg = "transparent")
 ```
 
 #### f. Best-fit Model Table
@@ -478,97 +640,84 @@ pretty_table <- dredge_table %>%
 #### g. EMM Graphs
 
 ```{r}
-
-# arrow_colors <- function(climates){
-#   if (climates == "Arid") return({"red"})
-#   if (climates == "Intermediate") return({"orange"})
-#   if (climates == "Mesic") return({"blue"})
-# }
-# 
-# arrow_colors <- function(input){
-#   if (input == "Open") return({"red"})
-#   if (input == "Partial") return({"orange"})
-#   if (input == "Total") return({"blue"})
-# }
-
-arrow_colors <- (rep(c("red", "orange", "blue"), 3))
+# arrow_colors <- (rep(c("red", "orange", "blue"), 3))
 
 # making a function
-emm_plot <- function(model, Climate = TRUE, Treatment = TRUE) {
-  
-  if (Climate == TRUE && Treatment == TRUE) return({
-    
-    plot(emmeans(model, ~treatment | climate ),
-         CIs = FALSE,
-         type = "response",
-         comparisons = TRUE,
-         colors = c("black", "black", "blue", "red")) + # color names for estimates, CIs, PIs, and comparison arrows, respectively
-      labs(x = "EMM", y = "Climate") +
-      facet_grid(. ~climate) +
-      aes(fill = as.factor(treatment)) +
-      geom_segment(aes_(x = ~the.emmean, xend = ~lcmpl, y = ~pri.fac, yend = ~pri.fac), #copied from function's code on github
-               arrow = arrow(length = ggplot2::unit(.07, "inches"), type = "closed"),
-               color = arrow_colors) +
-      geom_segment(ggplot2::aes_(x = ~the.emmean, xend = ~rcmpl, y = ~pri.fac, yend = ~pri.fac),
-               arrow = arrow(length = ggplot2::unit(.07, "inches"), type = "closed"),
-               color = arrow_colors) +
-      coord_flip() +
-      geom_point(aes_(fill = "black"))+
-      theme_bw() +
-      theme(legend.position = "none")
-
-    })
-  
-  if (Climate == TRUE && Treatment == FALSE) return({
-    
-    plot(emmeans(model, ~climate),
-         CIs = FALSE,
-         type = "response",
-         comparisons = TRUE,
-         colors = c("black", "black", "blue", "red")) + # color names for estimates, CIs, PIs, and comparison arrows, respectively
-      labs(x = "EMM", y = "Climate") +
-      facet_grid(. ~climate) +
-      aes(fill = as.factor(treatment)) +
-      geom_segment(aes_(x = ~the.emmean, xend = ~lcmpl, y = ~pri.fac, yend = ~pri.fac), #copied from function's code on github
-               arrow = arrow(length = ggplot2::unit(.07, "inches"), type = "closed"),
-               color = arrow_colors) +
-      geom_segment(ggplot2::aes_(x = ~the.emmean, xend = ~rcmpl, y = ~pri.fac, yend = ~pri.fac),
-               arrow = arrow(length = ggplot2::unit(.07, "inches"), type = "closed"),
-               color = arrow_colors) +
-      coord_flip() +
-      geom_point(aes_(fill = "black"))+
-      theme_bw() +
-      theme(legend.position = "none")
-
-    })
-  
-  if (Climate == FALSE && Treatment == TRUE) return({
-    
-    plot(emmeans(model, ~treatment),
-         CIs = FALSE,
-         type = "response",
-         comparisons = TRUE,
-         colors = c("black", "black", "blue", "red")) + # color names for estimates, CIs, PIs, and comparison arrows, respectively
-      labs(x = "EMM", y = "Climate") +
-      facet_grid(. ~climate) +
-      aes(fill = as.factor(treatment)) +
-      geom_segment(aes_(x = ~the.emmean, xend = ~lcmpl, y = ~pri.fac, yend = ~pri.fac), #copied from function's code on github
-               arrow = arrow(length = ggplot2::unit(.07, "inches"), type = "closed"),
-               color = arrow_colors) +
-      geom_segment(ggplot2::aes_(x = ~the.emmean, xend = ~rcmpl, y = ~pri.fac, yend = ~pri.fac),
-               arrow = arrow(length = ggplot2::unit(.07, "inches"), type = "closed"),
-               color = arrow_colors) +
-      coord_flip() +
-      geom_point(aes_(fill = "black"))+
-      theme_bw() +
-      theme(legend.position = "none")
-
-    })
-  
-  if (Climate == FALSE && Treatment == FALSE) return({
-    print("no inputs")
-    })
-}
+# emm_plot <- function(model, Climate = TRUE, Treatment = TRUE) {
+#   
+#   if (Climate == TRUE && Treatment == TRUE) return({
+#     
+#     plot(emmeans(model, ~treatment | climate ),
+#          CIs = FALSE,
+#          type = "response",
+#          comparisons = TRUE,
+#          colors = c("black", "black", "blue", "red")) + # color names for estimates, CIs, PIs, and comparison arrows, respectively
+#       labs(x = "EMM", y = "Climate") +
+#       facet_grid(. ~climate) +
+#       aes(fill = as.factor(treatment)) +
+#       geom_segment(aes_(x = ~the.emmean, xend = ~lcmpl, y = ~pri.fac, yend = ~pri.fac), #copied from function's code on github
+#                arrow = arrow(length = ggplot2::unit(.07, "inches"), type = "closed"),
+#                color = arrow_colors) +
+#       geom_segment(ggplot2::aes_(x = ~the.emmean, xend = ~rcmpl, y = ~pri.fac, yend = ~pri.fac),
+#                arrow = arrow(length = ggplot2::unit(.07, "inches"), type = "closed"),
+#                color = arrow_colors) +
+#       coord_flip() +
+#       geom_point(aes_(fill = "black"))+
+#       theme_bw() +
+#       theme(legend.position = "none")
+# 
+#     })
+#   
+#   if (Climate == TRUE && Treatment == FALSE) return({
+#     
+#     plot(emmeans(model, ~climate),
+#          CIs = FALSE,
+#          type = "response",
+#          comparisons = TRUE,
+#          colors = c("black", "black", "blue", "red")) + # color names for estimates, CIs, PIs, and comparison arrows, respectively
+#       labs(x = "EMM", y = "Climate") +
+#       facet_grid(. ~climate) +
+#       aes(fill = as.factor(treatment)) +
+#       geom_segment(aes_(x = ~the.emmean, xend = ~lcmpl, y = ~pri.fac, yend = ~pri.fac), #copied from function's code on github
+#                arrow = arrow(length = ggplot2::unit(.07, "inches"), type = "closed"),
+#                color = arrow_colors) +
+#       geom_segment(ggplot2::aes_(x = ~the.emmean, xend = ~rcmpl, y = ~pri.fac, yend = ~pri.fac),
+#                arrow = arrow(length = ggplot2::unit(.07, "inches"), type = "closed"),
+#                color = arrow_colors) +
+#       coord_flip() +
+#       geom_point(aes_(fill = "black"))+
+#       theme_bw() +
+#       theme(legend.position = "none")
+# 
+#     })
+#   
+#   if (Climate == FALSE && Treatment == TRUE) return({
+#     
+#     plot(emmeans(model, ~treatment),
+#          CIs = FALSE,
+#          type = "response",
+#          comparisons = TRUE,
+#          colors = c("black", "black", "blue", "red")) + # color names for estimates, CIs, PIs, and comparison arrows, respectively
+#       labs(x = "EMM", y = "Climate") +
+#       facet_grid(. ~climate) +
+#       aes(fill = as.factor(treatment)) +
+#       geom_segment(aes_(x = ~the.emmean, xend = ~lcmpl, y = ~pri.fac, yend = ~pri.fac), #copied from function's code on github
+#                arrow = arrow(length = ggplot2::unit(.07, "inches"), type = "closed"),
+#                color = arrow_colors) +
+#       geom_segment(ggplot2::aes_(x = ~the.emmean, xend = ~rcmpl, y = ~pri.fac, yend = ~pri.fac),
+#                arrow = arrow(length = ggplot2::unit(.07, "inches"), type = "closed"),
+#                color = arrow_colors) +
+#       coord_flip() +
+#       geom_point(aes_(fill = "black"))+
+#       theme_bw() +
+#       theme(legend.position = "none")
+# 
+#     })
+#   
+#   if (Climate == FALSE && Treatment == FALSE) return({
+#     print("no inputs")
+#     })
+# }
 
 # plot(emmeans(LA_CWM, ~ treatment | climate),
 #      CIs = FALSE,
@@ -595,30 +744,30 @@ emm_plot <- function(model, Climate = TRUE, Treatment = TRUE) {
 # la_cdf <- multcomp::cld(la_emm, level = 0.05, Letters = LETTERS)
 # plot(emmeans(LA_CWM, ~ treatment * climate), comparisons = TRUE)
 
-# Leaf Area
-plot1 <- emm_plot(model = LA_CWM, Climate = TRUE, Treatment = TRUE) +
-  labs(title = "Leaf Area CWM")
-plot1
+# # Leaf Area
+# plot1 <- emm_plot(model = LA_CWM, Climate = TRUE, Treatment = TRUE) +
+#   labs(title = "Leaf Area CWM")
+# plot1
+# 
+# # SLA
+# plot2 <- emm_plot(model = SLA_CWM) +
+#   labs(title = "Specific Leaf Area CWM")
+# 
+# # LDMC
+# plot3 <- emm_plot(model = LDMC_CWM) +
+#   labs(title = "Leaf Dry Matter Content CWM")
+# 
+# # Seed Mass
+# plot4 <- emm_plot(model = log_seed_mass) +
+#   labs(title = "Seed Mass (log) CWM")
+# 
+# # LNC
+# plot5 <- emm_plot(model = log_n_CWM) +
+#   labs(title = "Leaf Nitrogen Content (log) CWM")
 
-# SLA
-plot2 <- emm_plot(model = SLA_CWM) +
-  labs(title = "Specific Leaf Area CWM")
-
-# LDMC
-plot3 <- emm_plot(model = LDMC_CWM) +
-  labs(title = "Leaf Dry Matter Content CWM")
-
-# Seed Mass
-plot4 <- emm_plot(model = log_seed_mass) +
-  labs(title = "Seed Mass (log) CWM")
-
-# LNC
-plot5 <- emm_plot(model = log_n_CWM) +
-  labs(title = "Leaf Nitrogen Content (log) CWM")
-
-CWM_emmeans_all <- grid.arrange(plot1, plot2, plot3, plot4, plot5, ncol = 2)
-
-ggsave("CWM_emmeans_3.png", plot = CWM_emmeans_all, path = "~/github/Tejon_Functional_Traits/Figures", height = 10, width = 10)
+# CWM_emmeans_all <- grid.arrange(plot1, plot2, plot3, plot4, plot5, ncol = 2)
+# 
+# ggsave("CWM_emmeans_3.png", plot = CWM_emmeans_all, path = "~/github/Tejon_Functional_Traits/Figures", height = 10, width = 10)
 
 ```
 
